# hw8

./: .gitignore  README.md  pyproject.toml
first/: main.py  models.py  seeds.py
second/: consumer_email.py  consumer_sms.py  producer.py
