[tool.poetry]
name = "hw8"
version = "0.1.0"
description = ""
authors = ["F1r3n25 <dimalikegtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = {extras = ["srv", "tls"], version = "^4.6.0"}
mongoengine = "^0.27.0"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^20.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
